<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_bottom_nav_home" />

    <item
        android:id="@+id/navigation_upcoming_event"
        android:icon="@drawable/baseline_upcoming_24"
        android:title="@string/title_bottom_nav_upcoming" />

    <item
        android:id="@+id/navigation_finished_event"
        android:icon="@drawable/baseline_passed_24"
        android:title="@string/title_bottom_nav_finished" />

    <item
        android:id="@+id/navigation_favorite_event"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_bottom_nav_favorite" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_app_settings_alt_24"
        android:title="@string/title_bottom_nav_setting" />

</menu>