<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.main.fragment.home.HomeFragment"
        android:label="@string/title_bar_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.dicodingevent.ui.main.fragment.upcomingEvent.UpcomingEventFragment"
        android:label="@string/title_bar_upcoming_event"
        tools:layout="@layout/fragment_upcoming_event" />

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.dicodingevent.ui.main.fragment.finishedEvent.FinishedEventFragment"
        android:label="@string/title_bar_finished_event"
        tools:layout="@layout/fragment_finished_event" />

    <fragment
        android:id="@+id/navigation_favorite_event"
        android:name="com.example.dicodingevent.ui.main.fragment.favoriteEvent.FavoriteEventFragment"
        android:label="@string/title_bar_favorite_event"
        tools:layout="@layout/fragment_finished_event" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.dicodingevent.ui.main.fragment.setting.SettingFragment"
        android:label="@string/title_bar_setting"
        tools:layout="@layout/fragment_finished_event" />
</navigation>